opam-version: "2.0"
name: "metaocaml-syb"
synopsis: "Staged version of the Scrap Your Boilerplate library"
version: "dev"
maintainer: "yallop@gmail.com"
author: "yallop@gmail.com"
homepage: "https://github.com/yallop/metaocaml-syb"
dev-repo: "git+https://github.com/yallop/metaocaml-syb.git"
bug-reports: "http://github.com/yallop/metaocaml-syb/issues"
license: "MIT"
build: [
    ["dune" "subst"] {dev}
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
   "dune" {build}
   "higher"
   "delimcc"
   "genlet"
   "ocaml-variants"
     {= "4.02.1+modular-implicits-ber" }
]

